add journal getFirst() and getLast() methods + small re-factoring